[package]
name = "vatsimfsdpacket"
version = "0.1.0"
authors = ["Connor T <connor0530@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1"
pnet = "0.26"
requests = "0.0"
num-derive = "0.3"
num-traits = "0.2"