[package]
name = "fsdparser"
version = "0.1.0"
authors = ["Connor T <connor0530@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sniffer = ["requests", "pnet"]

[dependencies]
text_io = "0.1"
num-derive = "0.3"
num-traits = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

requests = { version = "0.0", optional = true }
pnet = { version = "0.28", optional = true }

[[bin]]
name = "logsniffs"
path = "src/main.rs"
required-features = ["sniffer"]
